# mecagent-technical-test

./: .gitignore  README.md  config.py  good_luck.ipynb  pyproject.toml  train.py  utils.py  validate.py
